--- a/src/main/resources/application-h2.yaml
+++ b/src/main/resources/application-h2.yaml
@@ -1,9 +1,8 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:ecb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-#    url: jdbc:h2:file:/data/demo
-    username: ecb
-    password: bce
+    url: jdbc:h2:mem:etm;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    username: etm
+    password: mte
     driver-class-name: org.h2.Driver
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
