--- a/pom.xml
+++ b/pom.xml
@@ -15,19 +15,20 @@
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
-    <name>ETIM model</name>
+    <name>Model</name>
     <description>System providing ETIM model data</description>
 
     <properties>
         <java.version>17</java.version>
-        <jackson-dataformat-xml.version>2.13.1</jackson-dataformat-xml.version>
-        <spring-boot.version>2.7.0</spring-boot.version>
-        <liquibase.version>4.7.1</liquibase.version>
-        <org.mapstruct.version>1.5.0.Final</org.mapstruct.version>
+        <jackson-dataformat-xml.version>2.14.0</jackson-dataformat-xml.version>
+        <spring-boot.version>2.7.5</spring-boot.version>
+        <liquibase.version>4.17.2</liquibase.version>
+        <org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <jacoco.version>0.8.8</jacoco.version>
-        <junit-extensions.version>2.5.0</junit-extensions.version>
-        <commons-configuration2.version>2.7</commons-configuration2.version>
+        <junit-extensions.version>2.6.0</junit-extensions.version>
+        <commons-configuration2.version>2.8.0</commons-configuration2.version>
+        <springdoc-openapi-ui.version>1.6.12</springdoc-openapi-ui.version>
     </properties>
 
     <dependencies>
@@ -45,11 +46,6 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-configuration2</artifactId>
             <version>${commons-configuration2.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -96,6 +92,11 @@
             <version>${junit-extensions.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${springdoc-openapi-ui.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -123,5 +124,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
