--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.2</version>
+        <version>3.2.1</version>
     </parent>
 
     <groupId>com.malpro</groupId>
@@ -23,12 +23,12 @@
         <liquibase.version>4.22.0</liquibase.version>
         <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-        <jacoco.version>0.8.10</jacoco.version>
+        <jacoco.version>0.8.11</jacoco.version>
         <junit-extensions.version>2.6.0</junit-extensions.version>
         <commons-configuration2.version>2.9.0</commons-configuration2.version>
         <springdoc-openapi-starter-webmvc-ui.version>2.1.0</springdoc-openapi-starter-webmvc-ui.version>
         <hsqldb.version>2.7.2</hsqldb.version>
-        <sonar.login>sqa_54cef5c28573818d0bf0d55974f54377d215bc83</sonar.login>
+        <easy-random-core.version>5.0.0</easy-random-core.version>
     </properties>
 
     <dependencies>
@@ -97,12 +97,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>io.github.glytching</groupId>
-            <artifactId>junit-extensions</artifactId>
-            <version>${junit-extensions.version}</version>
-            <scope>test</scope>
-        </dependency>
+		<dependency>
+			<groupId>org.jeasy</groupId>
+			<artifactId>easy-random-core</artifactId>
+			<version>${easy-random-core.version}</version>
+		</dependency>
     </dependencies>
 
     <build>
@@ -143,7 +142,7 @@
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
-                <version>3.9.0.2155</version>
+                <version>3.10.0.2594</version>
             </plugin>
         </plugins>
     </build>
